Revert "Fix Github master action"
This reverts commit 4a7b9f7de891bc3d677b763caf64d54aeec5ace5.

Revert "Initial Java 13 updates (#185)"

This reverts commit 73a25cb81c9d6687706fbff084866e564680a07d.