@@ -1,4 +1,4 @@
-FROM maven:3.6.3-jdk-13 AS build
+FROM maven:3.6.3-jdk-8-slim AS build
 WORKDIR /app
 COPY pom.xml .
 RUN mvn -e -B dependency:resolve
@@ -6,9 +6,8 @@ COPY src ./src
 COPY .git ./.git
 RUN mvn package -P git-commit --no-transfer-progress
 
-FROM adoptopenjdk/openjdk13:jre-13.0.1_9-alpine
+FROM openjdk:8-jre-alpine
 COPY --from=build /app/target/ninbot-1.0-SNAPSHOT.jar /
 RUN apk add --no-cache curl
 HEALTHCHECK CMD curl --request GET --url http://localhost:8090/actuator/health || exit 1
-RUN java -version
-CMD ["java", "--enable-preview", "-jar", "/ninbot-1.0-SNAPSHOT.jar"]
+CMD ["java", "-jar", "/ninbot-1.0-SNAPSHOT.jar"]
